<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDo List</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="reset">Reset</string>
    <string name="info">Info</string>
    <string name="preferences">Preferences</string>
    <string name="dashboard">Dashboard</string>
    <string name="aboutUS">Greetings, dear user. We are group of developers-novices from Lviv Polytechnic National
        University (Ukraine). Our group: Rubakha Danylo(talks too much), Atamuratov Edem(poor coder, which was a person,
        who were given
        inspiration to whole team), Mykhailiuk Volodymyr(he helped us very much, found some open-source libraries),
        Andriy Mykytyn(our animator, do not worry,
        you will not see his animation in this program, at least, while i am typing this) and finally, Pavlo Furd(he is
        out secret weapon). We are students from CS-105
        group. Thank you for reading this article.
    </string>
    <string name="return_to_default">Set to default</string>
    <string name="confirm_button">Confirm</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="preferences_notifications">Notifications settings</string>
    <string name="data_saved">Data saved</string>
    <string name="notification_title">ToDoList</string>
    <string name="notification_text">You have undone tasks. Please check your list.</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="add_title">Add ToDo</string>
    <string name="update">Update</string>
    <string name="update_todo">Update ToDo</string>
    <string name="delete_dial">Do you want to delete this ToDo?</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="continue_d">Continue</string>
    <string name="add_title_item">Add ToDo item</string>
    <string name="update_todo_item">Update ToDo item</string>
    <string name="delete_dial_todo">Do you want to delete this item?</string>
    <string name="time_chosen">Time chosen</string>
    <string name="Hello">Contact with developer</string>
    <string name="side_menu" translatable="false">atamuratov.edem@gmail.com</string>
    <string name="pick_color">Pick color</string>
    <string name="pick_secondary">Secondary color</string>
    <string name="pick_primary">Primary color</string>
    <string name="pick_accent">Third color</string>
    <string name="nav_today">Tasks for today</string>
    <string name="shopping">Shopping list</string>
    <string name="shopping_header">Your shopping items</string>
    <string name="delete_dial_shopping">Do you want to delete this item?</string>
    <string name="currency_hrn" translatable="false">₴</string>
    <string name="total_shopping">Total: </string>
    <string name="non_filled_fields_warning">Name, price and amount are required!</string>
    <string name="db_write_error">Error writing DB</string>
    <string name="shop_dial_head">Enter name</string>
    <string name="hint_name">Name here</string>
    <string name="enter_price">Enter price</string>
    <string name="hint_price">Price here</string>
    <string name="enter_amount">Enter amount</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="add_an_item">Add an item</string>

</resources>
