<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view"
    android:id = "@+id/sidebar_menu">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_settings"
                android:title="@string/preferences"
                android:icon="@android:drawable/ic_menu_preferences" android:onClick="preferences"/>
        <item
                android:id="@+id/nav_info"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/info" android:onClick="aboutUS"/>
        <item
                android:id="@+id/nav_today"
                android:onClick="goToday" android:icon="@android:drawable/ic_lock_idle_alarm"
                android:title="@string/nav_today"></item>

    </group>
</menu>
