<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".shopDialogActivity" android:id="@+id/amount_et">

    <TextView
            android:text="@string/add_an_item"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            tools:layout_editor_absoluteX="108dp" android:id="@+id/ActivityLabel"
            app:layout_constraintTop_toTopOf="parent" android:gravity="center" android:textSize="30sp"
            android:background="@color/colorHeader"/>
    <TextView
            android:text="@string/shop_dial_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_name_text" android:layout_marginTop="50sp"
            app:layout_constraintTop_toBottomOf="@+id/ActivityLabel" app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_vertical" android:paddingStart="20sp" android:textSize="24sp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/item_name_et"
            app:layout_constraintTop_toBottomOf="@+id/item_name_text"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/hint_name" android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_price_text" android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@+id/item_name_et" app:layout_constraintStart_toStartOf="parent"
            android:text="@string/enter_price" android:textSize="24sp" android:paddingStart="20sp"/>
    <EditText
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:ems="10"
            android:id="@+id/price_et"
            app:layout_constraintStart_toEndOf="@+id/item_price_text" android:layout_marginStart="24sp"
            android:layout_marginTop="20sp" app:layout_constraintTop_toBottomOf="@+id/item_name_et"
            android:hint="@string/hint_price" android:inputType="number"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toEndOf="@+id/price_et"
            app:layout_constraintTop_toBottomOf="@+id/item_name_et" android:layout_marginTop="23sp" android:text="@string/currency_hrn"
            android:textSize="30sp" android:layout_marginEnd="20sp" app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="10sp"/>
    <TextView
            android:text="@string/enter_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:layout_marginTop="25sp"
            app:layout_constraintTop_toBottomOf="@+id/price_et" app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="20dp" android:textSize="24sp"/>
    <Button
            android:text="@string/minus"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_decrease" app:layout_constraintStart_toEndOf="@+id/textView8"
            android:layout_marginStart="10dp" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/price_et"/>
    <Button
            android:text="@string/plus"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_increase" app:layout_constraintStart_toEndOf="@+id/et_amount"
            android:layout_marginStart="8sp" android:layout_marginTop="15sp"
            app:layout_constraintTop_toBottomOf="@+id/price_et"/>
    <EditText
            android:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_amount" app:layout_constraintStart_toEndOf="@+id/button_decrease"
            android:layout_marginStart="8sp" android:layout_marginTop="15sp"
            app:layout_constraintTop_toBottomOf="@+id/price_et" android:textSize="24sp"
            android:inputType="numberSigned|numberDecimal"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/total_tv" app:layout_constraintStart_toStartOf="parent"
            android:padding="20sp" android:text="Total:"
            android:gravity="center_horizontal" android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button_add_shop_item"/>
    <Button
            android:text="Add item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_add_shop_item"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="10sp" android:padding="10sp"/>
</android.support.constraint.ConstraintLayout>